--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>Checks are based on my understanding of the University of Wolverhampton's "Cite Them Right Harvard" style of referencing as outlined <a href="https://www.wlv.ac.uk/lib/skills-for-learning/referencing/" target="_blank">here</a>.</p>
 		</div>
 		<div style="text-align:center">
-			<p id="num-warnings">Paste your reference list into the box below.</p>
+			<p id="num-warnings"></p>
 		</div>
 		<div style="text-align:center"><p id='issue-types'></p>
 		</div>
