--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Droid+Sans+Mono" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<!-- highlight-within-textarea CSS/JS -->
-		<link href="jquery.highlight-within-textarea.css" rel="stylesheet">
-		<script src="jquery.highlight-within-textarea.js"></script>
+		<link href="css/jquery.highlight-within-textarea.css" rel="stylesheet">
+		<script src="js/jquery.highlight-within-textarea.js"></script>
 		<!-- Custom styles for highlight-within-textarea -->
-		<link href="hwt-custom.css" rel="stylesheet">
+		<link href="css/hwt-custom.css" rel="stylesheet">
 		<!-- General styles -->
-		<link href="style.css" rel="stylesheet">
-		<link href="tooltip.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
+		<link href="css/tooltip.css" rel="stylesheet">
 		<!-- My JS -->
-		<script type="text/javascript" src="checks.js"></script>
-		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="js/checks.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 
 	<body>
@@ -31,7 +31,13 @@
 		<div style="text-align:center"><p id='issue-types'></p>
 		</div>
 		<div>
-		<textarea style="height: 600px; width: 1000px" class="reference-list" id="input-area"></textarea>
+			<textarea style="height: 600px; width: 1000px" class="reference-list" id="input-area"></textarea>
+		</div>
+		<div style="text-align:center">
+			<p>
+				<a href="https://github.com/ljdyer/reference-checker" target="_blank"><img src="img/github-logo.png"></img></a>
+				<a href="https://youtu.be/UFPMFIrCqaw"><img src="img/youtube-logo.png"></img></a>
+			</p>
 		</div>
 	</body>
 </html>
