fix file structure

--- a/site/index.html
+++ b/site/index.html
@@ -6,16 +6,16 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Droid+Sans+Mono" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<!-- highlight-within-textarea CSS/JS -->
-		<link href="css/jquery.highlight-within-textarea.css" rel="stylesheet">
-		<script src="js/jquery.highlight-within-textarea.js"></script>
+		<link href="./css/jquery.highlight-within-textarea.css" rel="stylesheet">
+		<script src="./js/jquery.highlight-within-textarea.js"></script>
 		<!-- Custom styles for highlight-within-textarea -->
-		<link href="css/hwt-custom.css" rel="stylesheet">
+		<link href="./css/hwt-custom.css" rel="stylesheet">
 		<!-- General styles -->
-		<link href="css/style.css" rel="stylesheet">
-		<link href="css/tooltip.css" rel="stylesheet">
+		<link href="./css/style.css" rel="stylesheet">
+		<link href="./css/tooltip.css" rel="stylesheet">
 		<!-- My JS -->
-		<script type="text/javascript" src="js/checks.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="./js/checks.js"></script>
+		<script type="text/javascript" src="./js/main.js"></script>
 	</head>
 
 	<body>
