--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,7 @@
 			<h1>Reference checker</h1>
 		</div>
 		<div style="text-align:center">
-			<p>Checks are based on my understanding of the University of Wolverhampton's "Cite Them Right Harvard" style of referencing as outlined <a href="https://www.wlv.ac.uk/lib/skills-for-learning/referencing/" target="_blank">here</a>.</p>
+			<p>Checks are based on my understanding of the University of Wolverhampton's "Cite Them Right Harvard" style of referencing as outlined <a href="https://www.wlv.ac.uk/lib/skills-for-learning/referencing/" target="_blank">here</a>. See the <a href="https://github.com/ljdyer/reference-checker" target="_blank">documentation</a> for more details.</p>
 		</div>
 		<div style="text-align:center">
 			<p id="num-warnings"></p>
@@ -36,7 +36,7 @@
 		<div style="text-align:center">
 			<p>
 				<a href="https://github.com/ljdyer/reference-checker" target="_blank"><img src="img/github-logo.png"></img></a>
-				<a href="https://youtu.be/UFPMFIrCqaw"><img src="img/youtube-logo.png"></img></a>
+				<a href="https://youtu.be/UFPMFIrCqaw" target="_blank"><img src="img/youtube-logo.png"></img></a>
 			</p>
 		</div>
 	</body>
