--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,7 @@
 		<div style="text-align:center">
 			<p>
 				<a href="https://github.com/ljdyer/reference-checker" target="_blank"><img src="img/github-logo.png"></img></a>
-				<a href="https://youtu.be/UFPMFIrCqaw" target="_blank"><img src="img/youtube-logo.png"></img></a>
+				<a href="https://www.youtube.com/watch?v=xjoTKWqrL28" target="_blank"><img src="img/youtube-logo.png"></img></a>
 			</p>
 		</div>
 	</body>
